--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html>
  <head>
-   <!-- Этот раздел предназначен для заголовка страницы и технической информации. -->
+  <meta charset="UTF-8">
+  <title>Git</title>
+  <link rel="stylesheet" href="./style.css">
  </head>
 
  <body>
